Finishing UI connections

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script type="text/javascript" src="https://formit3d.github.io/FormItExamplePlugins/SharedPluginFiles/FormItInterface.js"></script>
         <script type="text/javascript" src="https://formit3d.github.io/FormItExamplePlugins/SharedPluginFiles/FormItPluginUI.js"></script>
         <script type="text/javascript" src="GroupSwapper.js"></script>
+        <script type="text/javascript" src="https://formit3d.github.io/PropertiesPlus/v22_0/PropertiesPlus_Client.js"></script>
         <script type="text/javascript">
         FormItInterface.Initialize(async function () {
 
