First pass of transform/copy logic

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <META NAME="Title" CONTENT="Group Swapper">
     <META NAME="Author" CONTENT="Autodesk FormIt">
         <script type="text/javascript" src="https://formit3d.github.io/SharedPluginUtilities/FormIt_v22.js"></script>
+        <script type="text/javascript" src="https://formit3d.github.io/FormItWorkflowPlugins/Utils.js"></script>
         <script type="text/javascript" src="https://formit3d.github.io/FormItExamplePlugins/SharedPluginFiles/FormItInterface.js"></script>
         <script type="text/javascript" src="https://formit3d.github.io/FormItExamplePlugins/SharedPluginFiles/FormItPluginUI.js"></script>
         <script type="text/javascript" src="GroupSwapper.js"></script>
