--- a/v23_0/index.html
+++ b/v23_0/index.html
@@ -1,46 +1,48 @@
 <html>
 <head>
-    <!-- for testing shared files locally, use: ../../FormItExamplePlugins/SharedPluginFiles -->
-    <link rel="stylesheet" type="text/css" href="https://formit3d.github.io/FormItExamplePlugins/SharedPluginFiles/FormItPluginStyling.css">
     <title>Dynamo Eyedropper</title>
     <META NAME="Title" CONTENT="Group Swapper">
     <META NAME="Author" CONTENT="Autodesk FormIt">
-        <script type="text/javascript" src="https://formit3d.github.io/SharedPluginUtilities/FormIt_v22.js"></script>
-        <script type="text/javascript" src="https://formit3d.github.io/FormItWorkflowPlugins/Utils.js"></script>
-        <script type="text/javascript" src="https://formit3d.github.io/FormItExamplePlugins/SharedPluginFiles/FormItInterface.js"></script>
-        <script type="text/javascript" src="https://formit3d.github.io/FormItExamplePlugins/SharedPluginFiles/FormItPluginUI.js"></script>
-        <script type="text/javascript" src="GroupSwapper.js"></script>
-        <script type="text/javascript" src="https://formit3d.github.io/PropertiesPlus/v22_0/PropertiesPlus_Client.js"></script>
-        <script type="text/javascript">
-        FormItInterface.Initialize(async function () {
 
-            // subscribe to the message sent when selection is changed
-            FormItInterface.SubscribeMessage("FormIt.Message.kSelectionsChanged", async function(msg)
+    <!-- for testing shared files locally, use: ../../SharedPluginUtilities -->
+    <!-- interface with FormIt -->
+    <script type="text/javascript" src="https://formit3d.github.io/SharedPluginUtilities/v23_0/FormItInterface.js"></script>
+    <!-- UI and styling -->
+    <script type="text/javascript" src="https://formit3d.github.io/SharedPluginUtilities/FormItPluginUI.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://formit3d.github.io/SharedPluginUtilities/FormItPluginStyling.css">
+    <!-- plugin scripts -->
+    <script type="text/javascript" src="GroupSwapper.js"></script>
+    <script type="text/javascript" src="https://formit3d.github.io/PropertiesPlus/v22_0/PropertiesPlus_Client.js"></script>
+    <script type="text/javascript">
+    FormItInterface.Initialize(async function () {
+
+        // subscribe to the message sent when selection is changed
+        FormItInterface.SubscribeMessage("FormIt.Message.kSelectionsChanged", async function(msg)
+        {
+            if (GroupSwapper.bIsSelectionForCopyInProgress)
             {
-                if (GroupSwapper.bIsSelectionForCopyInProgress)
-                {
-                    // when the FormIt selection changes, automatically update the plugin UI
-                    await GroupSwapper.updateUIForCopyObject();
+                // when the FormIt selection changes, automatically update the plugin UI
+                await GroupSwapper.updateUIForCopyObject();
 
-                    GroupSwapper.bIsSelectionForCopyInProgress = false;
-                }
+                GroupSwapper.bIsSelectionForCopyInProgress = false;
+            }
 
-                if (GroupSwapper.bIsSelectionForReplaceInProgress)
-                {
-                    // when the FormIt selection changes, automatically update the plugin UI
-                    await GroupSwapper.updateUIForReplaceObject();
+            if (GroupSwapper.bIsSelectionForReplaceInProgress)
+            {
+                // when the FormIt selection changes, automatically update the plugin UI
+                await GroupSwapper.updateUIForReplaceObject();
 
-                    GroupSwapper.bIsSelectionForReplaceInProgress = false;
-                }
+                GroupSwapper.bIsSelectionForReplaceInProgress = false;
+            }
 
-            });
+        });
 
-            // initialize the UI
-            // this must be called from here, to ensure the HTML page is loaded
-            // before scripts try to access the window document
-            GroupSwapper.initializeUI();
+        // initialize the UI
+        // this must be called from here, to ensure the HTML page is loaded
+        // before scripts try to access the window document
+        GroupSwapper.initializeUI();
 
-        }); // DOMContentLoaded
+    }); // DOMContentLoaded
     </script>
 </head>
 <body>
